test/fail/var-const-field.as
let o : {var x : Nat} = new {x = 0};
